syntax update for java 17