@@ -101,17 +101,17 @@ public abstract class AbstractMetadataTestCase extends JavaModuleAbstractTestCas
   }
 
   protected String flow(String operation, String clazz) {
-    return String.format("%s%s", operation, clazz);
+    return "%s%s".formatted(operation, clazz);
   }
 
   protected String flow(String operation, String clazz, String method) {
     method = method.replaceAll("\\(", "").replaceAll("\\)", "").replaceAll(",", "").trim();
-    return String.format("%s%s%s", operation, clazz, method);
+    return "%s%s%s".formatted(operation, clazz, method);
   }
 
   protected String flow(String operation, String clazz, String method, String args) {
     method = method.replaceAll("\\(", "").replaceAll("\\)", "");
-    return String.format("%s%s%s%s", operation, clazz, method, args);
+    return "%s%s%s%s".formatted(operation, clazz, method, args);
   }
 
   protected Set<MetadataKey> getKeys(String flow, String category) {
